--- a/wiki/Vorlagen.wiki
+++ b/wiki/Vorlagen.wiki
@@ -14,7 +14,7 @@ Die vorlagentypen sind DOT, DOC, RTF, HTML.
 
 = Vorlagen erstellen in Access =
 1. Eine bestehender Report kann geändert werden. z.Bsp. AddOn_Rechnung_Firma
-2. Report anschliessend in Access (Rechte Maustaste) exportieren in die dazugehörige Plug In. Somit kann Report auch nach einem Upgrade wieder importiert werden. 
+2. Report anschließend in Access (Rechte Maustaste) exportieren in die dazugehörige Plug In MDB Datei. Somit kann Report auch nach einem Upgrade wieder importiert werden. 
 
 
 = Vorlagen verwalten = 
